[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/Level2/Waves/introWave.gd" type="Script" id=1]
[ext_resource path="res://levels/level1WaveBased/DiveZoneExtents.gd" type="Script" id=2]
[ext_resource path="res://levels/level1WaveBased/Debug.gd" type="Script" id=3]

[node name="waveStarter" type="Node2D"]
script = ExtResource( 1 )

[node name="viewport_hint" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -320, -180, -320, 180, 320, 180, 320, -180 )

[node name="GruntFormationPoints" type="Node2D" parent="."]
modulate = Color( 1, 0.913725, 0, 1 )

[node name="C" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 262, 0 )

[node name="C2" type="Position2D" parent="GruntFormationPoints/C"]
position = Vector2( -93, -59 )

[node name="C3" type="Position2D" parent="GruntFormationPoints/C"]
position = Vector2( -96, 53 )

[node name="C4" type="Position2D" parent="GruntFormationPoints/C"]
position = Vector2( -34, 119 )

[node name="C5" type="Position2D" parent="GruntFormationPoints/C"]
position = Vector2( -42, -110 )

[node name="B1" type="Node2D" parent="GruntFormationPoints"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -96, 8 )

[node name="C" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 129, -154 )

[node name="C2" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 186, -155 )

[node name="C3" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 127, -112 )

[node name="C4" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 184, -110 )

[node name="C5" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 128, -66 )

[node name="C7" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 128, -27 )

[node name="C8" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 188, -27 )

[node name="C9" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 188, 38 )

[node name="C11" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 188, 73 )

[node name="C13" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 188, 100 )

[node name="C14" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 125, 100 )

[node name="C15" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 125, 131 )

[node name="C12" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 125, 73 )

[node name="C10" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 125, 39 )

[node name="C6" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 188, -67 )

[node name="M" type="Position2D" parent="GruntFormationPoints/B1"]
position = Vector2( 187, 131 )

[node name="DiveZoneExtents" type="Node2D" parent="."]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( -317, -171 )
BottomRight = Vector2( -91, 186 )

[node name="TopLeft" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -317, -171 )

[node name="BottomRight" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -91, 186 )

[node name="Spawners" type="Node2D" parent="."]
modulate = Color( 0.992157, 0.0823529, 1, 1 )

[node name="C" type="Position2D" parent="Spawners"]
position = Vector2( 122, -4 )

[node name="EnemyDump" type="Node2D" parent="."]

[node name="BulletsDump" type="Node2D" parent="."]

[node name="Debug" type="Label" parent="."]
anchor_left = -0.488
anchor_top = -0.486
anchor_right = -0.488
anchor_bottom = -0.486
margin_left = 178.0
margin_top = -177.0
margin_right = 307.0
margin_bottom = -163.0
script = ExtResource( 3 )

[node name="shot_timer" type="Timer" parent="."]
